[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/config/settings/system/SelectExtensionsPopup.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui_nodes/AccessibilityFocus.gd" type="Script" id=2]

[node name="SelectExtensionsPopup" type="Window"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.5
offset_top = -178.5
offset_right = 269.5
offset_bottom = 178.5
exclusive = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="IntroLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
offset_right = 519.0
offset_bottom = 14.0
text = "Add new extension"
align = 1

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/IntroLabel"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 18.0
offset_right = 519.0
offset_bottom = 168.0
custom_minimum_size = Vector2( 0, 150 )

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
offset_right = 249.0
offset_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
offset_right = 249.0
offset_bottom = 14.0
text = "Existing game extensions"
align = 1

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/HBoxContainer/VBoxContainer3/Label"]
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
offset_top = 18.0
offset_right = 249.0
offset_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="NewExtensions" type="HFlowContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer3/ScrollContainer"]
unique_name_in_owner = true
offset_right = 249.0
offset_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
offset_left = 253.0
offset_right = 266.0
offset_bottom = 150.0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
offset_right = 13.0
offset_bottom = 64.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
offset_top = 68.0
offset_right = 13.0
offset_bottom = 82.0
text = "or"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
offset_top = 86.0
offset_right = 13.0
offset_bottom = 150.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
offset_left = 270.0
offset_right = 519.0
offset_bottom = 150.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
offset_right = 249.0
offset_bottom = 14.0
text = "Custom extension"
align = 1

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/HBoxContainer/VBoxContainer/Label"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
offset_left = 37.0
offset_top = 60.0
offset_right = 212.0
offset_bottom = 84.0
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
offset_top = 5.0
offset_right = 91.0
offset_bottom = 19.0
text = "my_game_file."

[node name="ExtLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 95.0
offset_right = 175.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 80, 0 )
placeholder_text = "extension"
caret_blink = true
caret_blink_interval = 0.5

[node name="AddExtension" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_left = 106.0
offset_top = 130.0
offset_right = 143.0
offset_bottom = 150.0
size_flags_horizontal = 4
disabled = true
text = "Add"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 172.0
offset_right = 519.0
offset_bottom = 176.0

[node name="Label2" type="Label" parent="VBoxContainer"]
offset_top = 180.0
offset_right = 519.0
offset_bottom = 194.0
text = "Current extensions: (click to remove)"
align = 1

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/Label2"]
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
offset_top = 198.0
offset_right = 519.0
offset_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="CurrExtensions" type="HFlowContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
offset_right = 519.0
offset_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OK" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
offset_left = 244.0
offset_top = 317.0
offset_right = 274.0
offset_bottom = 337.0
size_flags_horizontal = 4
text = "Ok"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ExtLineEdit" to="." method="_on_ExtLineEdit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ExtLineEdit" to="." method="_on_AddExtension_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/AddExtension" to="." method="_on_AddExtension_pressed"]
[connection signal="pressed" from="VBoxContainer/OK" to="." method="_on_OK_pressed"]
